prevent logic leaks setting visibilities of div

--- a/frontend/css/general_css.css
+++ b/frontend/css/general_css.css
@@ -1,5 +1,6 @@
 /* Basic reset */
-
+#search_bar { display: none; } /* default hidden */
+#file_input { display: flex; } /* default visible */
 
 * { box-sizing: border-box; }
 html,body{ height:100%; margin:0; }
